Issue #3443866 by finnsky, markusVJH: The toggle button flickers on page load

--- a/core/modules/navigation/css/base/variables.css
+++ b/core/modules/navigation/css/base/variables.css
@@ -149,11 +149,6 @@ We need it root to calculate the size of the displace in .dialog-off-canvas-main
   --admin-toolbar-letter-spacing-0-06: var(--drupal-admin-letter-spacing-0-06, calc(0.00375 * var(--admin-toolbar-rem))); /* 0.06px */
 
   /**
-   * Transitions.
-   */
-  --admin-toolbar-transition: 150ms ease-out;
-
-  /**
    * Z-index.
    *
    * @see https://www.drupal.org/docs/theming-drupal/z-indexes-in-drupal-8
@@ -167,6 +162,12 @@ We need it root to calculate the size of the displace in .dialog-off-canvas-main
   --admin-toolbar-z-index-popover: var(--drupal-admin-z-index-popover, 601);
   --admin-toolbar-z-index-footer: var(--drupal-admin-z-index-footer, 701);
   --admin-toolbar-z-index-tooltip: var(--drupal-admin-z-index-tooltip, 801);
+}
+/**
+  * Transitions.
+  */
+[data-admin-toolbar-transitions] {
+  --admin-toolbar-transition: 150ms ease-out;
 }
 @media (prefers-reduced-motion) {
   [data-drupal-admin-styles] {
